Changed deprecated method in Parser.java